--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "imports-loader": "^0.7.1",
     "mobile-detect": "^1.3.6",
     "package": "^1.0.1",
+    "pug": "^2.0.0-rc.3",
     "showdown": "^1.6.4",
     "slug": "^0.9.1",
     "steem": "^0.5.20",
     "store": "^2.0.4",
     "svg-url-loader": "^2.1.1",
+    "vee-validate": "^2.0.0-rc.12",
     "vue": "^2.3.3",
     "vue-axios": "^2.0.2",
     "vue-cookie": "^1.1.3",
@@ -60,6 +62,7 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.22.0",
