--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^3.5.2",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "element-ui": "^1.3.4",
     "esteem-lib": "^0.4.7",
     "font-awesome": "^4.7.0",
@@ -51,6 +52,7 @@
     "vue-template-compiler": "^2.3.3",
     "vue2-animate": "^1.0.4",
     "vue2-google-maps": "^0.7.5",
+    "vuelidate": "^0.5.0",
     "vuemit": "^1.0.3",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0",
@@ -66,6 +68,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-vue-app": "^1.2.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.2",
     "eslint": "^3.15.0",
