--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-multilanguage": "^2.1.1",
     "vue-on-click-outside": "^1.0.3",
     "vue-quill-editor": "^2.2.1",
+    "vue-recaptcha": "^0.4.0",
     "vue-router": "^2.7.0",
     "vue-scrollto": "^2.6.4",
     "vue-template-compiler": "^2.3.3",
