--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-input-tag": "0.0.11",
     "vue-loader": "^12.0.3",
     "vue-markdown": "^2.1.3",
+    "vue-masked-input": "^0.5.2",
     "vue-meta": "^1.0.4",
     "vue-mugen-scroll": "^0.2.1",
     "vue-multilanguage": "^2.1.1",
